<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polarisutils</name>
  <version>1.0.0</version>
  <description>ROS2 interface management system for Polaris UUV - providing centralized topic definitions, QoS profiles, and non-intrusive utilities</description>

  <maintainer email="">Nautilus Software Team</maintainer>
  <license>MIT</license>

  <author email="">Nautilus Software Team</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS2 Core Dependencies -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <!-- Message Dependencies -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>can_msgs</depend>

  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>